# video-qa

./: .gitignore  README.md  cli.bat  cli.py  docker-compose.yaml  example.env  install.bat  launch.bat  launch_vlm_endpoint.bat  load_env.bat  main.py  pyproject.toml
app/: ui.py
examples/: clip_classifier_example.py  refactored_architecture_example.py
src/: config.py  ui.py  utils.py  vlm.py
src/watcher/: base.py  config.py  synthetizer.py  utils.py  vlm.py
src/watcher/activity/: base.py  recognizer.py  vlm_classifier.py
src/watcher/agent/: synthetizer.py
src/watcher/analyzer/: __init__.py  analysis.py  base.py  clip_analyzer.py  dspy_analyzer.py
src/watcher/data/: __init__.py  video_loader.py
src/watcher/detection/: base.py  ultralytics_detector.py
src/watcher/summary/: __init__.py  reporter.py
tests/: activity_classifier.py  dataloaders.py  detectors.py  image-analyzers.py  video-analyzers.py
